--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,8 @@
 
 body {
   margin: 0;
-  padding: 40px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #212529;
 }
